--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300&display=swap');
+
 .App {
   text-align: center;
 }
@@ -35,4 +37,95 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+body {
+    background: #2a2f4c;
+    font-family: 'DM Sans', sans-serif;
+    text-align:center;
+
+}
+#introduction {
+    font-size: 20px;
+    text-align: center;
+}
+
+
+#title {
+    font-size: 50px;
+    text-align: center;
+}
+#schedule, p {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  background: #90a0d9;
+  margin: auto;
+  width: 70%;
+  border-radius: 1rem;
+  padding: 1rem;
+  margin-top: 1rem;
+}
+table, td, th {
+  border: 1px solid rgb(0, 0, 0)
+}
+
+th {
+  background-color: rgb(207, 192, 246);
+  color: rgb(153, 22, 170);
+}
+td {
+  background-color: azure;
+}
+:is(h1,h2,h3)
+{
+    text-align: center;
+    margin-top:2%;
+    margin-bottom: 2%;
+    color: #bdbddd;
+}
+
+
+img {
+    width: 225px;
+    height: auto;
+}
+
+#aboutMeImage {
+    width: 301px;
+    height: auto;
+    border: 10px solid #324d4d;
+    border-radius: 50%;
+}
+
+
+
+img:hover {
+    opacity: 0.6;
+}
+
+
+
+
+.tinyBreak {
+    border: 10px solid #324d4d;
+    border-radius: 5px;
+    height: 0px;
+    width: 7%;
+    text-align: center;
+    margin-top: 2%;
+    margin-bottom: 3%;
+
+}
+
+.longBreak {
+    border: 10px solid #324d4d;
+    border-radius: 5px;
+    height: 0px;
+    width: 50%;
+    text-align: center;
+    margin-top: 4%;
+    margin-bottom: 3%;
+
 }
